Fix MAVEN_OPTS